<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAddLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lesson_name"/>

    <EditText
        android:id="@+id/edit_addLessonName"
        android:hint="@string/enter_lesson_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/Add"
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>