<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_confirm_btn_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp"
        android:text="@string/text_sign_up_period"
        android:textAllCaps="false"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/dialog_confirm_view_from_to"
        android:padding="@dimen/size_5dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_from"/>

        <TextView
            android:id="@+id/dialog_confirm_txt_from"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@drawable/bg_txt_old_name"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22/04/2018"/>

        <TextView
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_to"/>

        <TextView
            android:paddingRight="@dimen/size_10dp"
            android:id="@+id/dialog_confirm_txt_to"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@drawable/bg_txt_old_name"
            android:paddingLeft="@dimen/size_10dp"
            android:text="22/05/2018"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_confirm_btn_ok"
            android:layout_marginRight="@dimen/size_10dp"
            android:textAllCaps="false"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/dialog_confirm_btn_cancel"
            android:layout_marginLeft="@dimen/size_10dp"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>